--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "@angular-devkit/build-angular": "^15.1.6",
     "@angular/cli": "~15.1.6",
     "@angular/compiler-cli": "^15.1.0",
+    "@ngrx/schematics": "^15.4.0",
     "@schematics/angular": "~15.1.6",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
