--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "@nebular/eva-icons": "11.0.0",
     "@nebular/theme": "^11.0.0",
     "@ngrx/effects": "^15.4.0",
