--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -25,15 +25,17 @@
     ],
     "paths": {
       "@features/login": ["src/app/features/login/public_api.ts"],
-      "@features/signup": ["src/app/features/signup/public_api.ts"],
+      "@features/register": ["src/app/features/register/public_api.ts"],
       "@features/messages-list": ["src/app/features/messages-list/public_api.ts"],
-      "@features/cats-list": ["src/app/features/chats-list/public_api.ts"],
+      "@features/search-list": ["src/app/features/search-list/public_api.ts"],
 
       "@common": ["src/app/common/public_api.ts"],
 
       "@data-layer/auth": ["src/app/data-layer/auth/public_api.ts"],
       "@data-layer/chat": ["src/app/data-layer/chat/public_api.ts"],
       "@data-layer/user": ["src/app/data-layer/user/public_api.ts"],
+      "@data-layer/message": ["src/app/data-layer/message/public_api.ts"],
+      "rxjs": ["node_modules/rxjs"]
     }
   },
   "angularCompilerOptions": {
