--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,8 @@
     "@ngrx/entity": "^15.4.0",
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
+    "@types/crypto-js": "^4.1.1",
+    "crypto-js": "^4.1.1",
     "eva-icons": "^1.1.3",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.6.1",
